# avr-config

./: Cargo.toml  Dockerfile.ci  LICENSE  README.md  build.rs
.github/workflows/: docker-image.yml
src/: cpu_frequency.rs  lib.rs
